2017-05-29  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_hrect.m: Preserve colmumns names for stk_dataframe inputs

	* arrays/@stk_hrect/stk_hrect.m: Preserve colmumns names when the
	input is an stk_dataframe object.

2017-05-28  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_factorialdesign.m: Accept stk_dataframe levels

	* arrays/@stk_factorialdesign/stk_factorialdesign.m: Accept
	one-variable stk_dataframe factors and preserve column names in
	this case.
	* arrays/@stk_factorialdesign/stk_boundingbox.m: Do not assume
	that the cell array of levels is row-shaped.
	* admin/octpkg/patches/matlab-graphics-axis-Axes.patch: Update
	patch.

	stk_predict: Remove old inaccessible display_waitbar stuff

	* core/@stk_model_gpposterior/stk_predict.m: Remove old and
	inaccessible display_waitbar stuff.

2017-05-27  Julien Bect  <julien.bect@centralesupelec.fr>

	Implement the AKG criterion

	* sampling/stk_sampcrit_akg_eval.m: New function, this is were the
	actual computation of the AKG criterion happens.
	* sampling/private/halfpintl.m: New private function that computes
	the intersection of lower half-planes (equivalently, the lower
	envelope of a set of lines) needed in the AKG.
	* sampling/@stk_sampcrit_akg/stk_sampcrit_akg.m: New function.
	* sampling/@stk_sampcrit_akg/feval.m: New function, does some
	non-trivial preliminary work before calling stk_sampcrit_akg_eval.
	* sampling/@stk_sampcrit_akg/disp.m: New function, copied from
	other sampcrit classes with minor adaptations.
	* sampling/@stk_sampcrit_akg/get.m: New function, this is the same
	trivial getter as in other sampcrit classes.
	* sampling/@stk_sampcrit_akg/set.m: New function, contains some
	pre-computations that depend on the reference grid only.
	* examples/02_design_of_experiments/stk_example_doe05.m: Use AKG
	as a default, and propose EQI as an option.
	* admin/octpkg/INDEX: Update index with new functions.

	@stk_model_gpposterior/stk_make_kreq: new (internal) method
